# llm-portal

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose-dev.yaml  docker-compose-example.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: build-and-publish-docker-image-on-tag.yaml  integration-test-test-all-models-chat-completion.yaml
assets/: model_defaults.json  model_list.json  model_providers.json
models/: model_list.json  model_providers.json
src/core/: README.md  app.py  chat_utils.py  globals.py  logger.py  main.py  models.py  pyproject.toml  stats.py  tokenizers.py
src/core/models/: model_list.py  model_providers.py  models.py  objects.py
src/core/repositories/: stats_repository.py  users_repository.py
src/core/routers/: chat_models.py  router_auth.py  router_base.py  router_chat_completions.py  router_files.py  router_models.py  router_users.py
src/core/scripts/: show_usage_stats.py
src/core/workers/: w_stats.py
src/openai_wrappers/: types.py
tests/integration/: test_integration_all_models.py
