[project]
name = "llm-proxy"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "litellm>=1.61.9",
    "pydantic[email]>=2.10.6",
    "termcolor>=2.5.0",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
    "more-itertools>=10.6.0",
    "prompt-toolkit>=3.0.50",
    "tabulate>=0.9.0",
    "openai>=1.63.2",
]

[tool.uv.workspace]
members = [
    "src/core",
    "src/openai_wrappers"
]

[tool.uv.sources]
core = { workspace = true }
openai_wrappers = { workspace = true }
